# mnemora

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.claude/plans/: mossy-sprouting-meerkat.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
api/: requirements.txt
api/handlers/: auth.py  episodic.py  health.py  migrate.py  semantic.py  state.py  unified.py  warmer.py
api/lib/: aurora.py  dynamo.py  embeddings.py  episodes.py  models.py  responses.py  summarizer.py  usage.py
api/tests/: benchmark_state.py  conftest.py  test_authorizer.py  test_episodic.py  test_health.py  test_responses.py  test_semantic.py  test_state.py  test_unified.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
dashboard/components/: agent-card.tsx  api-key-card.tsx  api-key-manager.tsx  code-block.tsx  episode-timeline.tsx  health-indicator.tsx  memory-browser.tsx  sidebar.tsx  stat-card.tsx
dashboard/lib/: admin.ts  auth.ts  blog.ts  cloudwatch.ts  mnemora-api.ts  mock-data.ts  tiers.ts
docs/: competitive-positioning.md  mnemora-execution-plan.docx  mnemora-execution-plan.md  openapi.yaml
docs/architecture/: open-source-analysis.md
docs/brand/: design-system.md
docs/launch/: email-outreach.md  hackernews-post.md  reddit-post.md  twitter-thread.md
docs/site/: api-reference.md  concepts.md  pricing.md  quickstart.md
examples/connectors/: README.md  (+3 more)
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
sdk/: LICENSE  README.md  pyproject.toml
sdk/mnemora/: __init__.py  client.py  exceptions.py  models.py  sync_client.py
sdk/mnemora/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py
sdk/tests/: test_client.py  test_integrations.py
(+85 files in other folders)
