[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemora"
version = "0.1.1"
description = "Python SDK for Mnemora — AI agent memory database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Mnemora", email = "team@mnemora.dev" }]
keywords = ["ai", "agents", "memory", "langchain", "langgraph", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "eval_type_backport>=0.1.3; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.2",
]
langchain = [
    "langchain-core>=0.2",
]
crewai = [
    "crewai>=0.30",
]
all = [
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "crewai>=0.30",
]

[project.urls]
Homepage = "https://mnemora.dev"
Documentation = "https://docs.mnemora.dev"
Repository = "https://github.com/mnemora/mnemora-sdk"

[tool.hatch.build.targets.wheel]
packages = ["mnemora"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint.isort]
known-first-party = ["mnemora"]
